infra/k8s/query.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query
  labels:
    app: query
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query
        image: query:latest
        imagePullPolicy: Never
        ports:
        - name: query
          protocol: TCP
          containerPort: 4002
