infra/k8s/comments-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-clusterip
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
  - name: comments-clusterip
    protocol: TCP
    port: 4001
    targetPort: 4001
