infra/k8s/event-bus-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-clusterip
spec:
  type: ClusterIP
  selector:
    app: event-bus
  ports:
  - name: event-bus-clusterip
    protocol: TCP
    port: 4005
    targetPort: 4005
