infra/k8s/moderation-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: moderation-clusterip
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
  - name: moderation-clusterip
    protocol: TCP
    port: 4003
    targetPort: 4003
