infra/k8s/moderation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation
  labels:
    app: moderation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
      - name: moderation
        image: moderation:latest
        imagePullPolicy: Never
        ports:
        - name: moderation
          protocol: TCP
          containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-clusterip
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
  - name: moderation-clusterip
    protocol: TCP
    port: 4003
    targetPort: 4003
