infra/k8s/posts-entrypoint.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-entrypoint
spec:
  type: NodePort
  selector:
    app: posts
  ports:
  - name: posts-entrypoint
    protocol: TCP
    port: 4000
    targetPort: 4000
