infra/k8s/posts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts
  labels:
    app: posts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
      - name: posts
        image: posts:latest
        imagePullPolicy: Never
        ports:
        - name: posts
          protocol: TCP
          containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip
spec:
  type: ClusterIP
  selector:
    app: posts
  ports:
  - name: posts-clusterip
    protocol: TCP
    port: 4000
    targetPort: 4000
