infra/k8s/query-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip
spec:
  type: ClusterIP
  selector:
    app: query
  ports:
  - name: query-clusterip
    protocol: TCP
    port: 4002
    targetPort: 4002
